--- a/src/app/product-details/product-details.component.scss
+++ b/src/app/product-details/product-details.component.scss
@@ -6,6 +6,10 @@ img {
   width: 400px;
 }
 
+mat-card-content {
+  min-height: 150px;
+}
+
 mat-card-actions {
   display: flex;
   align-items: center;
