--- a/src/app/common/stars/stars.component.html
+++ b/src/app/common/stars/stars.component.html
@@ -1,9 +1,14 @@
-<mat-icon
-  *ngFor="let star of [1,2,3,4,5]"
-  (mouseenter)="starMouseEnter(star)"
-  (mouseleave)="starMouseLeave()"
-  (click)="rate(star)"
-  [color]="(rated || mouseOver) ? 'accent' : 'primary'">
-  {{(star
-  <=( starOver || rated || rating)) ? 'star' : 'star_border'}}
-</mat-icon>
+<div *ngIf="isLoading; else loaded">
+  <mat-spinner diameter="24"></mat-spinner>
+</div>
+<ng-template #loaded>
+  <mat-icon
+    *ngFor="let star of [1,2,3,4,5]"
+    (mouseenter)="starMouseEnter(star)"
+    (mouseleave)="starMouseLeave()"
+    (click)="rate(star)"
+    [color]="(rated || mouseOver) ? 'accent' : 'primary'">
+    {{(star
+    <=( starOver || rated || rating)) ? 'star' : 'star_border'}}
+  </mat-icon>
+</ng-template>
